[gd_scene load_steps=4 format=3 uid="uid://s345v7x5p2r4"]

[ext_resource type="Script" path="res://gui/inventory/scripts/inventory_slot.gd" id="1_gwnf1"]
[ext_resource type="Texture2D" uid="uid://5nbx35sy1y35" path="res://gui/inventory/assets/slot_toggle.png" id="2_03urd"]
[ext_resource type="FontFile" uid="uid://brkm5d1yg37hw" path="res://gui/fonts/monogram.ttf" id="3_tb45w"]

[node name="InventorySlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 20.0
offset_bottom = 20.0
size_flags_horizontal = 4
script = ExtResource("1_gwnf1")

[node name="SlotToggle" type="Sprite2D" parent="."]
texture = ExtResource("2_03urd")
centered = false
vframes = 2
frame = 1

[node name="ItemSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
stretch_mode = 3

[node name="Amount" type="Label" parent="ItemSprite"]
layout_mode = 0
offset_left = 2.0
offset_top = 12.0
offset_right = 17.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tb45w")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
